Add @ai-sdk/openai dependency

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/google": "^1.2.22",
     "@ai-sdk/huggingface": "^0.0.12",
+    "@ai-sdk/openai": "^2.0.88",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
